# gpgpu-comparison

./: .gitignore  CMakeLists.txt  README.md
include/: CUDAComputation.h  CUDAkernel.cuh  Computation.h  Matrix.h  OpenCLComputation.h  ParallelCPU.h
src/: CUDAComputation.cu  CUDAkernel.cu  Matrix.cpp  OpenCLComputation.cpp  OpenCLkernel.cl  ParallelCPU.cpp  main.cpp
